@@ -8,9 +8,9 @@ __all__ = [
 import sys
 import numpy as np
 
-from ..tools import ROOT
+from puppies.tools import ROOT
 sys.path.append(f"{ROOT}puppies/lib")
-#import _bilinint as bli
+import _bilinint as bli
 
 
 class bliss():
